--- a/test/Makefile
+++ b/test/Makefile
@@ -5,7 +5,13 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 SRC_DIR = $(PWD)/../src
-PROJECT_SOURCES = project.v
+PROJECT_SOURCES = rgbw_lamp.v
+PROJECT_SOURCES += clock_prescaler.v
+PROJECT_SOURCES += color_wheel_processor.v
+PROJECT_SOURCES += mult8x8.v
+PROJECT_SOURCES += pwm_gen.v
+PROJECT_SOURCES += spi_slave.v
+PROJECT_SOURCES += data_dispatcher.v
 
 ifneq ($(GATES),yes)
 
